feat: adicionando todas as rotas na documentação
